Add speed indicator alongside the speed menu

--- a/scss/components/_control-bar.scss
+++ b/scss/components/_control-bar.scss
@@ -140,6 +140,7 @@
       left: 300px;
       top: 47px;
       font-size: 16px;
+      text-align: left;
     }
 
     ul {
@@ -149,8 +150,8 @@
 
     .oo-popup-menu {
       position: relative;
-      left: 0px;
-      top: -30px;
+      left: 50px;
+      top: -25px;
     }
 
     .oo-disable {
